static/css/style.css
/*---------------------------------------------------- General styling */

#page-container {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    margin: 0;
    margin-top: 85px;
}

#content-container {
    margin-bottom: 30px;
}

header {
    margin: 0;
}

/* Remove bullet points from lists by default.
ul {
    list-style: none;
}
*/

.table {
   margin: auto;
   margin-top: 15px;
   margin-bottom: 20px;
   width: 70% !important;
}

.uppercase {
    text-transform: uppercase;
}

.col-md-7, .col-lg-7 {
    padding-left: 0;
    padding-right: 0;
}

.inline-block {
    display: inline-block;
}

/* Prevent anchor tags causing line breaks in text blocks. */
.inline {
    display: inline;
}

.list-item-margin li {
    margin-bottom: 10px;
}

.general-link {
  color: white;
  background-color: transparent;
  text-decoration: none;
}

.general-link:visited {
  color: pink;
  background-color: transparent;
  text-decoration: none;
}

.general-link:hover {
  color: lightblue;
  background-color: transparent;
  text-decoration: underline;
}

.general-link:active {
    color: white;
    background-color: transparent;
    text-decoration: underline;
}

.panel-title {
    text-align: center;
    font-size: 24px;
}

.email-link  {
    color: #fafafa;
    text-align: center;
    padding-left: 5px;
}

.email-link:hover {
    color: blue;
    background-color: transparent;
    text-decoration: underline;
    transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -webkit-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
}

/*-------------------------------------------------- Header Alert */

.alert-container .col-xs-12 {
    padding-left: 0;
    padding-right: 0;
}

.test-only-alert {
    color: #544600;
    background-color: #eec802;
    border: none;
    padding: 5px 15px;
    margin-bottom: 0;
    border-radius: 0;
}

.live-link {
    text-decoration: none;
    color: #000;
}

.live-link:hover {
    color: green;
}

.live-link:focus {
    text-decoration: none;
    color: green;
}

.live-link:visited {
    text-decoration: none;
    color: #000;
}

/*-------------------------------------------------- Header */

.page-title {
    font-family: 'Roboto', sans-serif;
    text-align: center;
    color: #fafafa;
    background-color: green;
    padding-left: 0;
    padding-right: 0;
}

.page-title h1 {
    margin-top: 2px;
    margin-bottom: 2px;
}

/*-------------------------------------------------- Navbar */

.donation-button {
    background-color:coral;
    border:1px solid;
}

.donation-button:hover {
    background-color:coral;
}

/*-------------------------------------------------- Modal Windows */
/* Modal windows are used to show email contact forms, videos and audio podcasts. */

.modal-footer {
    text-align: left;
}
/*-------------------------------------------------- Footer */

footer {
    display: flex;
    flex-flow: column;
    margin-top: auto;
    bottom: 0;
    width: 100%;
    min-height: 110px;
    padding: 5px;
    background-color: #676767;
    color: #fafafa;
}

.footer {
    font-family: "Exo", sans-serif;
    font-weight: 500;
    color: #f0ad4e;
}

.footer-link {
    color: #f0ad4e;
    text-align: center;
    text-decoration: none;
}

.footer-link:hover {
    color: lightblue;
    background-color: transparent;
    text-decoration: underline;
}

.footer-link:active {
    color: #f0ad4e;
    text-decoration: none;
}

.footer-link:visited {
    color: #f0ad4e;
    text-decoration: underline;
}

/*-------------------------------------------------- Home Page */

.donation-panel {
    background-color: green;
    color: #fafafa;
    margin-top: 15px;
    padding: 5px;
    border-radius: 6px;
    overflow-y: auto;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12), 0 2px 4px 0 rgba(0,0,0,0.08);
}

.group-image {
    max-width: 100%;
    margin-top: 15px;
    margin-bottom: 0;
    padding: 0;
    border-radius: 6px;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12), 0 2px 4px 0 rgba(0,0,0,0.08);
}

.photo-credit {
    background-color: #e5e5e5;
    color: #000;
    padding-left: 3px;
    border-radius: 0px 0px 6px 6px;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12), 0 2px 4px 0 rgba(0,0,0,0.08);
}

.photo-credit-special {
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12), 0 2px 4px 0 rgba(0,0,0,0.08);
}

.photo-credit a {
    color: #337ab7;
}

.photo-credit a:hover {
    color: darkblue;
    text-decoration: none;
    transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -webkit-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
}

.photo-credit a:focus {
    color: darkblue;
    text-decoration: none;
}

/*-------------------------------------------------- Our Team Page */
.image-gallery {
    height: 500px;
    max-width: 100%;
    min-width: 88%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 15px;
    margin-bottom: 0;
    padding: 0;
    border-radius: 6px;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12), 0 2px 4px 0 rgba(0,0,0,0.08);
}

/*-------------------------------------------------- Volunteering Pages */
.image-activity {
    max-width: 100%;
    min-width: 88%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 15px;
    margin-bottom: 0;
    padding: 0;
    border-radius: 6px;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12), 0 2px 4px 0 rgba(0,0,0,0.08);
}

.general-panel {
    max-width: 576px;
    background-color: green;
    color: white;
    margin: auto;
    margin-top: 15px;
    padding: 2px 2px 5px 5px;
    border-radius: 6px;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12), 0 2px 4px 0 rgba(0,0,0,0.08);
}

.wide-panel {
    max-width: 1200px;
}
.orange-panel {
    background-color: #f0ad4e;
    color: black;
}

.green-panel {
    color: white;
    background-color: green;
}

.white-on-green {
    color: white;
    background-color: green;
}

/* Use Flexbox to allow panel to adjust height according to text content. */
.flex-with-text {
    display: flex;
    flex-direction: column;
}

/* Highlight menu item text for Volunteer|Apply to Volunteer */
.highlight-text {
    color: red;
}

/*-------------------------------------------------- Media Queries */

@media(max-width: 767px) {

    .page-title h1 {
        margin-top: 0;
        margin-bottom: 0;
    }

    .campaigns {
        min-height: 100px;
        overflow-y: scroll;
    }

    .local-news {
        margin: auto;
        margin-top: 15px;
        min-width: 100%;
    }

    ul {
        padding-left: 10px;
    }

    footer {
        margin-top: 20px;
    }
}

@media (min-width:768px) and (max-width:991px) {

    .news {
        margin: auto;
        margin-top: 15px;
        margin-bottom: 15px;
        max-height: 500px;
        min-width: 680px;
    }
 
    .local-news {
        margin: auto;
        margin-top: 15px;
        margin-bottom: 15px;
        min-width: 100%;
    }

    .text-metro-lobby {
        min-height: 450px;
        display: block;
        margin-left: auto;
        margin-right: auto;
    }

    .about-image {
        margin: auto;
        margin-top: 15px;
        min-width: 100%;
    }
    
    footer {
        margin-top: 20px;
    }
}

@media (max-width:991px) {

    footer {
        position: relative;
    }

    #content-wrap {
        padding-bottom: 0;    /* Remove padding for footer height. Not applicable below 991px. */
    }
}

@media (min-width:992px) and (max-width:1199px) {
    
    .about-image {
        margin: auto;
        margin-top: 15px;
        min-width: 100%;
    }

    .news-rail {
        max-width: 100%;
        max-height: 304px;
    }

   .text-metro-lobby {
        min-height: 290px;
    }

    .news-cycling {
        min-height: 364px;
    }

    .news-air-pollution {
        max-width: 100%;
        max-height: 304px;
    }
}

@media (max-width:767px) {

    .text-metro-lobby {
        min-height: auto;
        display: block;
        margin-left: 15px;
        margin-right: 15px;
    }

    .image-metro-lobby {
        min-width: 94%;
    }

    .image-rail-metro {
        max-width: 96%;
    }
}

/* Collapse the Navbar at 1030px and below. This is to stop the expanded menu wrapping.*/
@media (max-width: 1030px) {

    .navbar-header {
      float: none;
    }
    .navbar-left,.navbar-right {
      float: none !important;
    }
    .navbar-toggle {
      display: block;
    }
    .navbar-collapse {
      border-top: 1px solid transparent;
      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-fixed-top {
      top: 0;
      border-width: 0 0 1px;
    }
    .navbar-collapse.collapse {
      display: none!important;
    }
    .navbar-nav {
      float: none!important;
      margin-top: 7.5px;
    }
    .navbar-nav>li {
      float: none;
    }
    .navbar-nav>li>a {
      padding-top: 10px;
      padding-bottom: 10px;
    }
    .collapse.in {
      display:block !important;
    }
}

